k8s/arcee-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arcee
  namespace: overmindv
spec:
  selector:
    app: arcee
  ports:
    - name: http
      port: 8080
      targetPort: http
