k8s/ironhide-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ironhide
  namespace: overmindv
spec:
  selector:
    app: ironhide
  ports:
    - name: http
      port: 8080
      targetPort: http
