k8s/laserbeak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laserbeak
  namespace: overmindv
spec:
  selector:
    app: laserbeak
  ports:
    - name: http
      port: 8081
      targetPort: http
