k8s/soundwave-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soundwave
  namespace: overmindv
spec:
  selector:
    app: soundwave
  ports:
    - name: http
      port: 3000
      targetPort: http
